--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="node_modules/osc/dist/osc-browser.min.js"></script>
 
     <script type="module">
-        import { TrigPos } from '/main copy.js';
+        import { exportPositionsArray } from '/main copy.js';
 
 
         var port = new osc.WebSocketPort({
@@ -49,55 +49,44 @@
 
         port.open();
 
-        // Send OSC messages every 100ms
         setInterval(() => {
-            //console.log('TrigPos:', TrigPos); // Add this line to log the variable
+            // Iterate over the exportPositionsArray
+            for (let i = 0; i < exportPositionsArray.length; i++) {
+                let TrigPos = exportPositionsArray[i][0];
 
-            // Create three separate OSC messages for x, y, and z
-            // AND: HARDCODE to OSC REceiver IEM PLUGIN ROOMENCODER
 
-            
-            // Map the x component of TrigPos from [-1000, 1000] to [-15, 15]
-            // THE X-VALUE needs to be flipped !! Mapping
-            const xMapped = map(TrigPos.x, 1000, -1000, -15, 15);
+                // Map the x, y, and z components of TrigPos
+                const xMapped = map(TrigPos.x, 1000, -1000, -15, 15);
+                const zMapped = map(TrigPos.y, 0, 500, 0, 10);
+                const yMapped = map(TrigPos.z, -1000, 1000, -15, 15);
 
-        // Map the y component of TrigPos from [0, 500] to [0, 10]
-        // In the ROOM-ENCODER this is the Z-VALUE
-        const zMapped = map(TrigPos.y, 0, 500, 0, 10);
+                console.log(`Trigger ${i+1}: X = ${xMapped}, Y = ${yMapped}, Z = ${zMapped}`);
 
-        // Map the z component of TrigPos from [-1000, 1000] to [-15, 15]
-        const yMapped = map(TrigPos.z, -1000, 1000, -15, 15);
+                // Create three separate OSC messages for x, y, and z
+                const xMessage = {
+                    address: '/RoomEncoder/sourceX' + i,
+                    args: [{ type: 'f', value: xMapped.toFixed(2) }]
+                };
+                const yMessage = {
+                    address: '/RoomEncoder/sourceY' + i,
+                    args: [{ type: 'f', value: yMapped.toFixed(2) }]
+                };
+                const zMessage = {
+                    address: '/RoomEncoder/sourceZ' + i,
+                    args: [{ type: 'f', value: zMapped.toFixed(2) }]
+                };
+
+                // Send the messages over OSC
+                port.send(xMessage);
+                port.send(yMessage);
+                port.send(zMessage);
+            }
+        }, 100);
 
         // Map a value from one range to another
         function map(value, min1, max1, min2, max2) {
-        return (value - min1) * (max2 - min2) / (max1 - min1) + min2;
+            return (value - min1) * (max2 - min2) / (max1 - min1) + min2;
         }
-        /*
-        console.log('xMapped:', xMapped);
-        console.log('yMapped:', yMapped);
-        console.log('zMapped:', zMapped);
-        */
-
-            const xMessage = {
-                address: '/RoomEncoder/sourceX',
-                // Mapping values from -1000 - 1000 to -15 - 15
-                args: [{ type: 'f', value: xMapped.toFixed(2) }]
-            };
-            const yMessage = {
-                address: '/RoomEncoder/sourceY',
-                args: [{ type: 'f', value: yMapped.toFixed(2) }]
-            };
-            const zMessage = {
-                address: '/RoomEncoder/sourceZ',
-                args: [{ type: 'f', value: zMapped.toFixed(2) }]
-            };
-
-            // Send the messages over OSC
-            port.send(xMessage);
-            port.send(yMessage);
-            port.send(zMessage);
-        }, 100);
-
 
     </script>
 </body>
