Added Build Code for Web-Deployment

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
     <!-- Include the "main copy.js" script -->
     <script type="module" src="/main copy.js"></script>
 
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/osc/dist/osc-browser.min.js"></script>
+    <!--<script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/osc/dist/osc-browser.min.js"></script> -->
+
+    <script  src="/jquery.js"></script>
+    <script src="/osc-browser.min.js"></script>
+
 
     <script type="module">
         import { exportPositionsArray } from '/main copy.js';
