--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <title>My second three.js app</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script type="module" src="/main copy.js"></script>
+    <script src="gui-actions.js"></script>
   </head>
   <body>
     <div class="main-container">
       <div id="container" class="left-col col"></div>
-      <div id="trajectoryGUI" class="right-col col"></div>
+
+      <div id="gui-container" class="right-col col">
+        <div class="tabs">
+          <button class="tab" onclick="openTab(event, 'Tab1')">
+            Trajectories
+          </button>
+          <button class="tab" onclick="openTab(event, 'Tab2')">Sources</button>
+          <button class="tab" onclick="openTab(event, 'Tab3')">Settings</button>
+          <button class="tab" onclick="openTab(event, 'Tab4')">OSC</button>
+        </div>
+        <div id="Tab1" class="tabcontent">Content for Tab 1</div>
+        <div id="Tab2" class="tabcontent">Content for Tab 2</div>
+        <div id="Tab3" class="tabcontent">Content for Tab 3</div>
+        <div id="Tab4" class="tabcontent">Content for Tab 4</div>
+      </div>
     </div>
 
     <!-- Include the "main copy.js" script -->
