--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My second three.js app</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Spat App</title>
+    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <script type="module" src="/main copy.js"></script>
+    <script type="module" src="/main.js"></script>
   </head>
   <body>
     <div class="main-container">
@@ -12,13 +15,8 @@
       <div id="trajectoryGUI" class="right-col col"></div>
     </div>
 
-    <!-- Include the "main copy.js" script -->
-    <!--<script type="module" src="/main copy.js"></script>-->
-
-    <!-- WEBSOCKET__ SOCKET.IO -->
-
+    <!-- Including Socket.IO for real-time communication -->
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
-
     <script type="module" src="/client_web.js"></script>
   </body>
 </html>
