feat: add scss, css autoprefixer and css normalization

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Spat App</title>
     <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.scss" />
     <script type="module" src="/main.js"></script>
   </head>
   <body>
