--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script type="module" src="/main copy.js"></script>
     <script src="gui-actions.js"></script>
+    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
+    <script type="module" src="/client_web.js"></script>
   </head>
   <body>
     <div class="main-container">
@@ -23,17 +25,21 @@
         <div id="Tab1" class="tabcontent">Content for Tab 1</div>
         <div id="Tab2" class="tabcontent">Content for Tab 2</div>
         <div id="Tab3" class="tabcontent">Content for Tab 3</div>
-        <div id="Tab4" class="tabcontent">Content for Tab 4</div>
+        <div id="Tab4" class="tabcontent">
+          <h2>OSC_Config</h2>
+          <table id="portTable" class="oscConfigTable">
+            <tr class="oscConfigTableRow">
+              <th class="oscConfigTableHeader">In Port</th>
+              <th class="oscConfigTableHeader">Out Port</th>
+              <th class="oscConfigTableHeader">Address</th>
+              <th class="oscConfigTableHeader">Coordinates</th>
+              <th class="oscConfigTableHeader">Active</th>
+            </tr>
+          </table>
+          <button onclick="addRow()">Add Port</button>
+          <button onclick="deleteRow()">Delete Port</button>
+        </div>
       </div>
     </div>
-
-    <!-- Include the "main copy.js" script -->
-    <!--<script type="module" src="/main copy.js"></script>-->
-
-    <!-- WEBSOCKET__ SOCKET.IO -->
-
-    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
-
-    <script type="module" src="/client_web.js"></script>
   </body>
 </html>
