--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <button class="tab" onclick="openTab(event, 'Tab4')">OSC</button>
         </div>
         <div id="Tab1" class="tabcontent">Content for Tab 1</div>
-        <div id="Tab2" class="tabcontent" style="display: block">
+        <div id="Tab2" class="tabcontent">
           <div id="triggers" class="triggers">
             <button class="add-trigger">
               <span>+</span>
