--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <button class="tab" onclick="openTab(event, 'Tab3')">Settings</button>
           <button class="tab" onclick="openTab(event, 'Tab4')">OSC</button>
         </div>
-        <div id="Tab1" class="tabcontent trajectories" style="display: block">
+        <div id="Tab1" class="tabcontent trajectories">
           <div id="trajectory-tabs" class="trajectory-tabs">
             <button>Trajectory 1</button>
             <button>Trajectory 2</button>
@@ -74,7 +74,7 @@
             </div>
           </div>
         </div>
-        <div id="Tab2" class="tabcontent">
+        <div id="Tab2" class="tabcontent" style="display: block">
           <div id="triggers" class="triggers">
             <button class="add-trigger">
               <span>+</span>
