--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
               <th class="oscConfigTableHeader">In Port</th>
               <th class="oscConfigTableHeader">Out Port</th>
               <th class="oscConfigTableHeader">Address</th>
-              <th class="oscConfigTableHeader">Coordinates</th>
-              <th class="oscConfigTableHeader">Active</th>
+              <th class="oscConfigTableHeader">Open/Close</th>
+              <th class="oscConfigTableHeader">Send</th>
             </tr>
           </table>
           <button onclick="addRow()">Add Port</button>
