feat: new trigger creation)

--- a/index.html
+++ b/index.html
@@ -76,11 +76,16 @@
         </div>
         <div id="Tab2" class="tabcontent" style="display: block">
           <div id="triggers" class="triggers">
-            <button class="add-trigger">
-              <span>+</span>
-              <span>Add</span>
-              <span>trigger</span>
-            </button>
+            <button id="create-trigger-0" class="add-trigger">+</button>
+            <button id="create-trigger-1" class="add-trigger">+</button>
+            <button id="create-trigger-2" class="add-trigger">+</button>
+            <button id="create-trigger-3" class="add-trigger">+</button>
+            <button id="create-trigger-4" class="add-trigger">+</button>
+            <button id="create-trigger-5" class="add-trigger">+</button>
+            <button id="create-trigger-6" class="add-trigger">+</button>
+            <button id="create-trigger-7" class="add-trigger">+</button>
+            <button id="create-trigger-8" class="add-trigger">+</button>
+            <button id="create-trigger-9" class="add-trigger">+</button>
           </div>
         </div>
         <div id="Tab3" class="tabcontent">Content for Tab 3</div>
