feat: add/delete trigger and styles

--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
           </div>
         </div>
         <div id="Tab2" class="tabcontent" style="display: block">
+          <div>
+            <div class="lines">
+              <div class="line top"></div>
+              <div class="line middle"></div>
+              <div class="line left20"></div>
+              <div class="line left40"></div>
+              <div class="line left60"></div>
+              <div class="line left80"></div>
+            </div>
+          </div>
           <div id="triggers" class="triggers">
             <button id="create-trigger-0" class="add-trigger">+</button>
             <button id="create-trigger-1" class="add-trigger">+</button>
