fix tension bug

--- a/index.html
+++ b/index.html
@@ -31,58 +31,7 @@
             <button>Trajectory 3</button>
           </div> -->
           <!-- array of tragectories -->
-          <div class="trajectories" id="trajectories-container">
-            <div id="trajectory" class="trajectory">
-              <div class="header">
-                <div class="title">Trajectory 1</div>
-                <div class="control">
-                  <!-- toggle close param on curve -->
-                  <label for="animate">Closed</label>
-                  <input type="checkbox" id="animate" name="animate" />
-                </div>
-                <div class="control">
-                  <!-- update curve tension -->
-                  <label class="label">Tension</label>
-                  <input type="range" />
-                </div>
-              </div>
-              <!-- array of tragectory cubes/points -->
-              <div id="trajectory-points">
-                <div id="trajectory-point">
-                  <div class="control">
-                    <!-- x coordinate of cube/point -->
-                    <label>x</label>
-                    <div>
-                      <input type="range" />
-                      <input />
-                    </div>
-                  </div>
-                  <div class="control">
-                    <!-- y coordinate of cube/point -->
-                    <label>y</label>
-                    <div>
-                      <input type="range" />
-                      <input />
-                    </div>
-                  </div>
-                  <div class="control">
-                    <!-- z coordinate of cube/point -->
-                    <label>z</label>
-                    <div>
-                      <input type="range" />
-                      <input />
-                    </div>
-                  </div>
-                  <div class="control">
-                    <button>delete</button>
-                  </div>
-                  <div class="control">
-                    <button>add</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="trajectories" id="trajectories-container"></div>
         </div>
         <div id="Tab2" class="tabcontent">
           <div>
