feat: add new curve

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <button class="tab" onclick="openTab(event, 'Tab4')">OSC</button>
         </div>
         <div id="Tab1" class="tabcontent trajectories" style="display: block">
+          <button id="create-curve">Add trajectory</button>
           <!-- <div id="trajectory-tabs" class="trajectory-tabs">
             <button>Trajectory 1</button>
             <button>Trajectory 2</button>
