MultiplayermanagerClass. Get and set curve values.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             <button id="create-trigger-9" class="add-trigger">+</button>
           </div>
         </div>
-        <div id="Tab3" class="tabcontent">Content for Tab 3</div>
+        <div id="Tab3" class="tabcontent">
+          <div class="settings" id="settings-container"></div>
+        </div>
         <div id="Tab4" class="tabcontent">
           <h2>OSC_Config</h2>
           <div class="OSC" id="osc-container">
