--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
   </head>
   <body>
     <div class="main-container">
-      <div id="3d-container" class="col left"></div>
+      <div id="3d-container" class="col left">
+        <button
+          id="reset-viewpoint"
+          style="position: absolute; bottom: 10px; left: 10px"
+        >
+          Reset Viewpoint
+        </button>
+      </div>
 
       <div id="gui-container" class="col right">
         <div class="tabs">
