renamed triggers with objects in UI. adapted speed range. arrows instead of ltr.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <button class="tab" onclick="openTab(event, 'Tab1')">
             Trajectories
           </button>
-          <button class="tab" onclick="openTab(event, 'Tab2')">Sources</button>
+          <button class="tab" onclick="openTab(event, 'Tab2')">Objects</button>
           <button class="tab" onclick="openTab(event, 'Tab3')">Settings</button>
           <button class="tab" onclick="openTab(event, 'Tab4')">OSC</button>
         </div>
