--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Spat App</title>
+    <title>WeSp</title>
     <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
     <link rel="stylesheet" type="text/css" href="styles.scss" />
   </head>
