--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
   <body>
     <div class="main-container">
       <div id="3d-container" class="col left">
-        <button
-          id="reset-viewpoint"
-          style="position: absolute; bottom: 10px; left: 10px"
-        >
-          Reset Viewpoint
-        </button>
+        <div class="viewpoint-wrapper">
+          <button id="rotate-left">Rotate Left</button>
+          <button id="reset-viewpoint">Reset Viewpoint</button>
+          <button id="rotate-right">Rotate Right</button>
+        </div>
       </div>
 
       <div id="gui-container" class="col right">
