--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div id="gui-container" class="col right">
         <div class="tabs">
-          <button class="tab" onclick="openTab(event, 'Tab1')">
+          <button class="tab active" onclick="openTab(event, 'Tab1')">
             Trajectories
           </button>
           <button class="tab" onclick="openTab(event, 'Tab2')">Objects</button>
@@ -55,19 +55,13 @@
           class="tabcontent trajectories-container"
           style="display: block"
         >
-          <button id="create-curve">Add trajectory</button>
-          <!-- <div id="trajectory-tabs" class="trajectory-tabs">
-            <button>Trajectory 1</button>
-            <button>Trajectory 2</button>
-            <button>Trajectory 3</button>
-          </div> -->
-          <!-- array of tragectories -->
+          <div id="tab-container" class="tab-container"></div>
           <div class="trajectories" id="trajectories-container"></div>
         </div>
         <div id="Tab2" class="tabcontent">
           <div>
             <div class="lines">
-              <div class="line top"></div>
+              <!-- <div class="line top"></div> -->
               <div class="line middle"></div>
               <div class="line left20"></div>
               <div class="line left40"></div>
