--- a/index.html
+++ b/index.html
@@ -119,9 +119,22 @@
       </div>
     </div>
     <!-- Including Socket.IO for real-time communication -->
-    <script src="gui-actions.js"></script>
+    <script>
+      function openTab(evt, tabName) {
+        var i, tabcontent, tablinks;
+        tabcontent = document.getElementsByClassName('tabcontent');
+        for (i = 0; i < tabcontent.length; i++) {
+          tabcontent[i].style.display = 'none';
+        }
+        tablinks = document.getElementsByClassName('tab');
+        for (i = 0; i < tablinks.length; i++) {
+          tablinks[i].className = tablinks[i].className.replace(' active', '');
+        }
+        document.getElementById(tabName).style.display = 'block';
+        evt.currentTarget.className += ' active';
+      }
+    </script>
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
-    <script type="module" src="/client_web.js"></script>
     <script type="module" src="/index.js"></script>
   </body>
 </html>
