renamed trigger as object 2

--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
               <div class="line left80"></div>
             </div>
           </div>
-          <div id="triggers" class="triggers">
-            <button id="create-trigger-0" class="add-trigger">+</button>
-            <button id="create-trigger-1" class="add-trigger">+</button>
-            <button id="create-trigger-2" class="add-trigger">+</button>
-            <button id="create-trigger-3" class="add-trigger">+</button>
-            <button id="create-trigger-4" class="add-trigger">+</button>
-            <button id="create-trigger-5" class="add-trigger">+</button>
-            <button id="create-trigger-6" class="add-trigger">+</button>
-            <button id="create-trigger-7" class="add-trigger">+</button>
-            <button id="create-trigger-8" class="add-trigger">+</button>
-            <button id="create-trigger-9" class="add-trigger">+</button>
+          <div id="objects" class="objects">
+            <button id="create-object-0" class="add-object">+</button>
+            <button id="create-object-1" class="add-object">+</button>
+            <button id="create-object-2" class="add-object">+</button>
+            <button id="create-object-3" class="add-object">+</button>
+            <button id="create-object-4" class="add-object">+</button>
+            <button id="create-object-5" class="add-object">+</button>
+            <button id="create-object-6" class="add-object">+</button>
+            <button id="create-object-7" class="add-object">+</button>
+            <button id="create-object-8" class="add-object">+</button>
+            <button id="create-object-9" class="add-object">+</button>
           </div>
         </div>
         <div id="Tab3" class="tabcontent">
